Added EJS views and layout, added pages

--- a/CRUD & Authentication/WebProject/server/views/about.ejs
+++ b/CRUD & Authentication/WebProject/server/views/about.ejs
@@ -2,8 +2,10 @@
 <%- include ./partials/main_nav.ejs %>
 
 <main class="container mt-4">
-  <h1><%= message %></h1>
-  <h2 class="text-muted"><%= error.status %></h2>
+  <h1>About</h1>
+  <p>
+    BookTrack is an application built using Node.js, Express, MongoDB, and EJS.
+  </p>
 </main>
 
 <%- include ./partials/footer.ejs %>
