--- a/CRUD & Authentication/WebProject/server/views/Books/list.ejs
+++ b/CRUD & Authentication/WebProject/server/views/Books/list.ejs
@@ -1,71 +1,72 @@
 <%- include ../partials/header.ejs %>
 <%- include ../partials/main_nav.ejs %>
 
-<!--Main content-->
-<main class="container">
-    <div class="row">
-        <div class="offset-md-1 col-md-10">
-            <h1><%= title %></h1>
-            <% if(typeof displayName=='string' && displayName) { %>
-                <a href="/books/add" class="btn btn-primary" role="button">
-                <i class="fas fa-plus-circle"></i> Add a Book
-            </a>
-            <% } %>
-            <table class="table table-bordered table-striped table-hover">
-            <% if(typeof displayName=='string' && displayName) { %>
-                <!--Header Row-->
-                <tr class="d-flex">
-                    <th class="text-center col-2">Title</th>
-                    <th class="text-center col-2">Author</th>
-                    <th class="text-center col-1">Year</th>
-                    <th class="col-4">Description</th>
-                    <th class="text-center col-1">Price</th>
-                    <th class="text-center col-1"></th>
-                    <th class="text-center col-1"></th>
-                </tr>
-                <% for(let count=0; count<BookList.length;count++) { %>
-                    <tr class="d-flex">
-                        <td class="text-center col-2"><%= BookList[count].name %></td>
-                        <td class="text-center col-2"><%= BookList[count].author %></td>
-                        <td class="text-center col-1"><%= BookList[count].published %></td>
-                        <td class="col-4"><%= BookList[count].description %></td>
-                        <td class="text-center col-1"><%= BookList[count].price %></td>
-                        <td class="text-center col-1">
-                        <a href="/books/edit/<%= BookList[count]._id%>" 
-                            class="btn btn-primary btn-sm">
-                            <i class="fas fa-pencil-alt"></i> Edit
-                        </a></td>
-                        <td class="text-center col-1">
-                            <a href="/books/delete/<%= BookList[count]._id%>" 
-                            class="btn btn-danger btn-sm"> 
-                            <i class="fas fa-trash-alt"></i> Delete</a></td>
-                        
-                    </tr>
-                <% } %>
-                <% } else { %>
-                    <!--Header Row-->
-                <tr class="d-flex">
-                    <th class="text-center col-2">Title</th>
-                    <th class="text-center col-2">Author</th>
-                    <th class="text-center col-1">Year</th>
-                    <th class="col-4">Description</th>
-                    <th class="text-center col-1">Price</th>
-                </tr>
-                <% for(let count=0; count<BookList.length;count++) { %>
-                    <tr class="d-flex">
-                        <td class="text-center col-2"><%= BookList[count].name %></td>
-                        <td class="text-center col-2"><%= BookList[count].author %></td>
-                        <td class="text-center col-1"><%= BookList[count].published %></td>
-                        <td class="col-4"><%= BookList[count].description %></td>
-                        <td class="text-center col-1"><%= BookList[count].price %></td>                        
-                    </tr>
-                <% } %>
-                <% } %>
-            </table>
-        </div>
-    </div>
-</main>
-<br>
-<br>
-<%- include ../partials/footer.ejs %>
+<main class="container mt-4">
+  <div class="d-flex justify-content-between align-items-center mb-3">
+    <h1 class="h3"><%= title %></h1>
+    <% if (displayName) { %>
+      <a href="/books/add" class="btn btn-success">Add Book</a>
+    <% } %>
+  </div>
 
+  <% if (error) { %>
+    <div class="alert alert-danger"><%= error %></div>
+  <% } %>
+
+  <div class="table-responsive">
+    <table class="table table-striped table-hover align-middle">
+      <thead class="table-primary">
+        <tr>
+          <th>Title</th>
+          <th>Author</th>
+          <th class="text-center">Year</th>
+          <th>Description</th>
+          <th class="text-end">Price</th>
+          <% if (displayName) { %>
+            <th class="text-center">Actions</th>
+          <% } %>
+        </tr>
+      </thead>
+      <tbody>
+        <% if (BookList && BookList.length > 0) { %>
+          <% BookList.forEach(function (book) { %>
+            <tr>
+              <td><%= book.name %></td>
+              <td><%= book.author %></td>
+              <td class="text-center"><%= book.published || '' %></td>
+              <td><%= book.description %></td>
+              <td class="text-end">
+                <% if (typeof book.price !== 'undefined') { %>
+                  $<%= Number(book.price).toFixed(2) %>
+                <% } %>
+              </td>
+              <% if (displayName) { %>
+                <td class="text-center">
+                  <a href="/books/edit/<%= book._id %>" class="btn btn-sm btn-outline-primary me-1">
+                    Edit
+                  </a>
+                  <a href="/books/delete/<%= book._id %>"
+                     class="btn btn-sm btn-outline-danger"
+                     onclick="return confirmDelete('<%= book.name %>');">
+                    Delete
+                  </a>
+                </td>
+              <% } %>
+            </tr>
+          <% }); %>
+        <% } else { %>
+          <tr>
+            <td colspan="6" class="text-center text-muted">
+              No books in the directory yet.
+              <% if (displayName) { %>
+                <a href="/books/add">Add the first one</a>.
+              <% } %>
+            </td>
+          </tr>
+        <% } %>
+      </tbody>
+    </table>
+  </div>
+</main>
+
+<%- include ../partials/footer.ejs %>
