--- a/CRUD & Authentication/WebProject/server/views/auth/login.ejs
+++ b/CRUD & Authentication/WebProject/server/views/auth/login.ejs
@@ -1,39 +1,36 @@
 <%- include ../partials/header.ejs %>
 <%- include ../partials/main_nav.ejs %>
-<main class="container">
-    <% if(message.length > 0) { %>
-        <div class="alert alter danger">
-            <%= message %>
+
+<main class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <h1 class="mb-3">Login</h1>
+
+      <% if (message) { %>
+        <div class="alert alert-danger"><%= message %></div>
+      <% } %>
+
+      <form action="/login" method="post" class="card card-body">
+        <div class="mb-3">
+          <label for="username" class="form-label">Username</label>
+          <input type="text" class="form-control" id="username" name="username" required />
         </div>
-    <%}%>
-    <div class="row">
-        <div class="offset-md-4 col-md-4">
-            <h1>Please login</h1>
-            <form method="post" autocomplete="off">
-                <fieldset class="form-group">
-                    <label for="username"></label>
-                    <input type="text" class="form-control"
-                    name="username"
-                    placeholder="Enter username"
-                    id="username" required autofocus>
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="password"></label>
-                    <input type="password" class="form-control"
-                    name="password"
-                    placeholder="Enter password"
-                    id="password" required>
-                    or
-                    <a href="/register">Register here</a>
-                </fieldset>
-                <fieldset class="form-group text-right">
-                    <input type="submit" class="btn btn-success" value="Login">
-                    <a href="/"></a>
-                    <input type="button" class="btn btn-warning" value="Cancel">
-                    <a href="/"></a>
-                </fieldset>
-            </form>
+
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="password" required />
         </div>
+
+        
+        <button type="submit" class="btn btn-primary w-100">Login</button>
+      </form>
+
+      <p class="mt-3 text-center">
+        Don't have an account?
+        <a href="/register">Register here</a>.
+      </p>
     </div>
+  </div>
 </main>
+
 <%- include ../partials/footer.ejs %>
