--- a/CRUD & Authentication/WebProject/server/views/auth/register.ejs
+++ b/CRUD & Authentication/WebProject/server/views/auth/register.ejs
@@ -1,51 +1,45 @@
 <%- include ../partials/header.ejs %>
 <%- include ../partials/main_nav.ejs %>
-<main class="container">
-    <% if(message.length > 0) { %>
-        <div class="alert alter danger">
-            <%= message %>
+
+<main class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <h1 class="mb-3">Register</h1>
+
+      <% if (message) { %>
+        <div class="alert alert-danger"><%= message %></div>
+      <% } %>
+
+      <form action="/register" method="post" class="card card-body">
+        <div class="mb-3">
+          <label for="displayName" class="form-label">Display Name</label>
+          <input type="text" class="form-control" id="displayName" name="displayName" required />
         </div>
-    <%}%>
-    <div class="row">
-        <div class="offset-md-4 col-md-4">
-            <h1>Register here</h1>
-            <form method="post" autocomplete="off">
-                <fieldset class="form-group">
-                    <label for="username"></label>
-                    <input type="text" class="form-control"
-                    name="username"
-                    placeholder="Enter username"
-                    id="username" required autofocus>
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="password"></label>
-                    <input type="password" class="form-control"
-                    name="password"
-                    placeholder="Enter password"
-                    id="password" required>
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="email"></label>
-                    <input type="email" class="form-control"
-                    name="email"
-                    placeholder="Enter your email"
-                    id="email" required>
-                </fieldset>
-                <fieldset class="form-group">
-                    <label for="displayName"></label>
-                    <input type="displayName" class="form-control"
-                    name="displayName"
-                    placeholder="Enter your displayName"
-                    id="displayName" required>
-                </fieldset>
-                <fieldset class="form-group text-right">
-                    <input type="submit" class="btn btn-success" value="Register">
-                    <a href="/"></a>
-                    <input type="button" class="btn btn-warning" value="Cancel">
-                    <a href="/"></a>
-                </fieldset>
-            </form>
+
+        <div class="mb-3">
+          <label for="username" class="form-label">Username</label>
+          <input type="text" class="form-control" id="username" name="username" required />
         </div>
+
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" class="form-control" id="email" name="email" required />
+        </div>
+
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="password" required />
+        </div>
+
+        <button type="submit" class="btn btn-success w-100">Register</button>
+      </form>
+
+      <p class="mt-3 text-center">
+        Already have an account?
+        <a href="/login">Login here</a>.
+      </p>
     </div>
+  </div>
 </main>
+
 <%- include ../partials/footer.ejs %>
