--- a/CRUD & Authentication/WebProject/server/views/contact.ejs
+++ b/CRUD & Authentication/WebProject/server/views/contact.ejs
@@ -2,8 +2,16 @@
 <%- include ./partials/main_nav.ejs %>
 
 <main class="container mt-4">
-  <h1>Contact</h1>
-  <p>For queries, please contact me at mailto:example@example.com.</p>
+  <h1 class="mb-3">Contact</h1>
+
+  <p>
+    For queries, please reach out by email:
+  </p>
+
+  <p>
+    Email:
+    <a href="mailto:shayaan.qureshi@ontariotechu.net">shayaan.qureshi@ontariotechu.net</a>
+  </p>
 </main>
 
 <%- include ./partials/footer.ejs %>
