--- a/CRUD & Authentication/WebProject/server/views/partials/footer.ejs
+++ b/CRUD & Authentication/WebProject/server/views/partials/footer.ejs
@@ -1,6 +1,6 @@
     <footer class="bg-dark text-light py-3 mt-5">
       <div class="container text-center small">
-        © <%= new Date().getFullYear() %> BookTrack – INFR3120 Assignment 3
+        © <%= new Date().getFullYear() %> BookTrack
       </div>
     </footer>
     <script src="/jquery/dist/jquery.min.js"></script>
