--- a/CRUD & Authentication/WebProject/server/views/Books/list.ejs
+++ b/CRUD & Authentication/WebProject/server/views/Books/list.ejs
@@ -9,7 +9,7 @@
     <% } %>
   </div>
 
-  <% // Show alert only if error message was passed %>
+  <% // Show only if error message was passed %>
   <% if (typeof error !== 'undefined' && error) { %>
     <div class="alert alert-danger"><%= error %></div>
   <% } %>
