--- a/CRUD & Authentication/WebProject/server/views/about.ejs
+++ b/CRUD & Authentication/WebProject/server/views/about.ejs
@@ -4,7 +4,8 @@
 <main class="container mt-4">
   <h1>About</h1>
   <p>
-    BookTrack is an application built using Node.js, Express, MongoDB, and EJS.
+    BookTrack lets you create, read, update, and delete books
+    using our simple interface and database design!
   </p>
 </main>
 
